test/files/neg/macro-invalidusage-presuper-typemacros.check
Macros_Test_2.scala:3: error: only type definitions and concrete field definitions allowed in early object initialization section
class D extends { type T = macro impl } with AnyRef
                       ^
one error found
